--- a/public/css/style.css
+++ b/public/css/style.css
@@ -243,7 +243,7 @@ a {
 }
 #container .left-col {
   background: rgba(255,255,255,0.85);
-  width: 300px;
+  width: 280px;
   position: fixed;
   opacity: 1;
   -webkit-transition: all 0.2s ease-in;
@@ -274,7 +274,7 @@ a {
   right: 0;
   min-height: 100%;
   background: rgba(255,255,255,0.8);
-  left: 300px;
+  left: 280px;
   width: auto;
 }
 @media screen and (max-width: 800px) {
@@ -721,7 +721,7 @@ a {
 }
 #header .header-menu li a {
   font-size: 14px;
-  min-width: 300px;
+  min-width: 280px;
 }
 #header .switch-area {
   position: relative;
@@ -834,7 +834,7 @@ a {
   color: transparent;
 }
 #header .header-nav .social #豆瓣 {
-  background: url("/img/豆瓣.png") center no-repeat #06c611;
+  background: url("/img/豆瓣.png") center no-repeat #336161;
 }
 #header .header-nav .social .GitHub:before {
   content: '\f18a';
@@ -1037,7 +1037,7 @@ a {
 }
 .hide-labels {
   position: fixed;
-  left: 378px;
+  left: 358px;
   top: 30px;
   padding: 1px;
   border: none;
@@ -1058,7 +1058,7 @@ a {
   opacity: 1;
 }
 #post-nav-button {
-  left: 300px;
+  left: 280px;
   top: 61.8%;
 }
 #post-nav-button a {
@@ -1373,6 +1373,8 @@ color
   margin: 0.5em auto;
   border-left: 4px solid rgba(147,181,224,0.4);
   background: rgba(255,255,255,0.4);
+  border-left: 5px solid rgba(112,134,142,0.85);
+  background: rgba(255,255,255,0.7);
 }
 .article-entry blockquote p {
   margin: 0.4em auto;
@@ -1652,7 +1654,7 @@ li:hover {
 #tocButton {
   position: fixed;
   border: none;
-  left: 220px;
+  left: 200px;
   top: 385px;
   background: none;
   font-size: 0.9em;
@@ -1668,7 +1670,7 @@ li:hover {
 }
 .toc-article {
   position: fixed;
-  width: 230px;
+  width: 210px;
   top: 378px;
   bottom: 1em;
   left: 0;
@@ -2032,14 +2034,14 @@ li:hover {
 }
 .article-entry pre,
 .article-entry .highlight {
-  background: rgba(249,249,249,0.5);
+  background: rgba(51,51,51,0.85);
   margin: auto;
   padding: 0.35em 1.5em;
   border-style: solid;
   border-color: #ddd;
   border-width: 1px;
   overflow: auto;
-  color: #4d4d4c;
+  color: #ccc;
   line-height: 22.400000000000002px;
 }
 .article-entry .highlight .gutter pre,
@@ -2056,7 +2058,7 @@ li:hover {
   text-shadow: none;
   padding: 0;
   background: none;
-  color: #4d4d4c;
+  color: #ccc;
 }
 .article-entry .highlight {
   -webkit-border-radius: 2px;
@@ -2082,7 +2084,7 @@ li:hover {
 }
 .article-entry .highlight figcaption {
   font-size: 0.85em;
-  color: #8e908c;
+  color: #999;
   line-height: 1em;
   margin-bottom: 1em;
 }
@@ -2109,7 +2111,7 @@ li:hover {
   border-style: solid;
   border-color: #ddd;
   border-width: 1px 0;
-  background: rgba(249,249,249,0.5);
+  background: rgba(51,51,51,0.85);
   padding: 15px 20px 15px 0;
 }
 .article-entry .gist .gist-file {
@@ -2135,8 +2137,8 @@ li:hover {
   border: none;
 }
 .article-entry .gist .gist-file .gist-meta {
-  background: rgba(249,249,249,0.5);
-  color: #8e908c;
+  background: rgba(51,51,51,0.85);
+  color: #999;
   font: 0.85em "Lucida Grande", Verdana, "Helvetica Neue", Arial, sans-serif;
   text-shadow: 0 0;
   padding: 0;
@@ -2156,10 +2158,13 @@ li:hover {
   padding: 0.05em 0.3em;
   -webkit-border-radius: 3px;
   border-radius: 3px;
+  var: 1;
+  color: #fff;
+  background: rgba(153,204,153,0.7);
 }
 pre .comment,
 pre .title {
-  color: #8e908c;
+  color: #999;
 }
 pre .variable,
 pre .attribute,
@@ -2173,7 +2178,7 @@ pre .html .doctype,
 pre .css .id,
 pre .css .class,
 pre .css .pseudo {
-  color: #c82829;
+  color: #f2777a;
 }
 pre .number,
 pre .preprocessor,
@@ -2181,12 +2186,12 @@ pre .built_in,
 pre .literal,
 pre .params,
 pre .constant {
-  color: #f5871f;
+  color: #f99157;
 }
 pre .class,
 pre .ruby .class .title,
 pre .css .rules .attribute {
-  color: #718c00;
+  color: #9c9;
 }
 pre .string,
 pre .value,
@@ -2194,10 +2199,10 @@ pre .inheritance,
 pre .header,
 pre .ruby .symbol,
 pre .xml .cdata {
-  color: #718c00;
+  color: #9c9;
 }
 pre .css .hexcolor {
-  color: #3e999f;
+  color: #6cc;
 }
 pre .function,
 pre .python .decorator,
@@ -2207,11 +2212,11 @@ pre .ruby .title .keyword,
 pre .perl .sub,
 pre .javascript .title,
 pre .coffeescript .title {
-  color: #4271ae;
+  color: #69c;
 }
 pre .keyword,
 pre .javascript .function {
-  color: #8959a8;
+  color: #c9c;
 }
 #footer {
   font-size: 0.8em;
